tests/fail_compile/derive_struct.rs
use propagate::Propagate;

#[derive(Propagate)]
struct MyStruct;

fn main() {}
